# nhl-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
examples/: Cargo.toml
examples/src/: alternative_language.rs  awards.rs  conferences.rs  country.rs  franchise.rs  franchises.rs  game_metadata.rs  games.rs  glossary.rs  ping.rs
src/: awards.rs  client.rs  conferences.rs  country.rs  franchise.rs  game.rs  glossary.rs  http.rs  lib.rs  ping.rs
src/game/: game.rs  metadata.rs  mod.rs
src/season/: component_season.rs  mod.rs
