[package]
name = "nhl-rs"
version = "0.0.0"
edition = "2021"

description = "NHL API wrapper for Rust"
license = "MIT"
homepage = "https://github.com/ReeceRose/nhl-rs"
repository = "https://github.com/ReeceRose/nhl-rs"

# manifest has no description, license, license-file, documentation, homepage or repository
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.189", features = ["derive"] }

[features]
default = ["nhl"]
# The "old" NHL API 
nhl = []
# The new NHL API https://gitlab.com/dword4/nhlapi/-/blob/master/new-api.md?ref_type=heads
nhle = []
