[package]
name = "nhl-rs"
version = "0.0.0"
edition = "2021"

description = "NHL API wrapper for Rust"
license = "MIT"
homepage = "https://github.com/ReeceRose/nhl-rs"
repository = "https://github.com/ReeceRose/nhl-rs"

# manifest has no description, license, license-file, documentation, homepage or repository
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
