[package]
name = "nhl-rs-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
nhl-rs = { path = "../" }
tokio = { version = "1.36.0", features = ["full"] }

[[example]]
name = "franchise"
path = "src/franchise.rs"

[[example]]
name = "glossary"
path = "src/glossary.rs"

[[example]]
name = "country"
path = "src/country.rs"


[[example]]
name = "alternative_language"
path = "src/alternative_language.rs"

[[example]]
name = "ping"
path = "src/ping.rs"

[[example]]
name = "game_metadata"
path = "src/game_metadata.rs"
